# eval-harness

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  GENERATION_PROMPT.md  LICENSE  PHASE2_BATCH1_DROID.md  PLAN_PHASE2.md  PLAN_PHASE2B.md  README.md  push.sh  pyproject.toml  run_droid.sh  test_samples_public.jsonl
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
profile-config/: AGENTS.md  SOUL.md  config.yaml
src/: __init__.py  agent.py  agent_evaluator.py  agent_models.py  calibrate.py  cli.py  db.py  evaluator.py  gate.py  ingest.py  judges.py  models.py  reporter.py  rubric.py  task_suite.py  trend.py
test_data/: eval_test_dataset.jsonl
tests/: conftest.py  test_agent.py  test_agent_cli.py  test_agent_evaluator.py  test_agent_llm_scoring.py  test_agent_models.py  test_calibrate.py  test_cli.py  test_coverage_gaps.py  test_db.py  test_db_agent.py  test_evaluator.py  test_gate.py  test_hardening.py  test_ingest.py  test_judges.py  test_models.py  test_phase2a_new.py  test_reporter.py  test_rubric.py  test_task_suite.py
