[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "llm-eval-harness"
version = "0.1.1"
description = "CLI tool that evaluates LLM outputs from production logs against a dual-dimension rubric."
readme = "README.md"
requires-python = ">=3.11"
keywords = [ "llm", "evaluation", "rubric", "cli", "faithfulness",]
classifiers = [ "Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Software Development :: Quality Assurance",]
dependencies = [ "typer>=0.12", "pydantic>=2.0", "rich>=13.0", "httpx>=0.27", "tiktoken>=0.7", "python-dotenv>=1.0",]
[[project.authors]]
name = "Eval Harness Contributors"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [ "mypy>=1.0", "pytest>=8", "pytest-httpx>=0.30", "pytest-cov>=5", "pytest-asyncio>=0.23", "ruff>=0.5",]

[project.scripts]
eval-harness = "src.cli:app"

[project.urls]
Homepage = "https://github.com/onicarps/eval-harness"
Repository = "https://github.com/onicarps/eval-harness"
Issues = "https://github.com/onicarps/eval-harness/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [ "E", "F", "I", "B", "UP", "W",]
ignore = [ "E501", "B008", "B017", "UP045", "UP007",]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = [ "tests",]
addopts = "-ra"
asyncio_mode = "auto"
filterwarnings = [ "ignore::DeprecationWarning",]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any_from_int = true
hide_error_codes = false
ignore_missing_imports = true
follow_imports = "normal"

[tool.hatch.build.targets.wheel]
packages = [ "src",]
